--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "serve:client": "vue-cli-service serve",
-    "serve:server": "nodemon server",
+    "serve:server": "nodemon server -L",
+    "serve": "concurrently \"npm:serve:*\" -k",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint client server",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
@@ -27,6 +28,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "~10.0.1",
     "babel-jest": "~24.3.1",
+    "concurrently": "^5.2.0",
     "eslint": "~5.15.1",
     "eslint-config-standard": "~12.0.0",
     "eslint-plugin-html": "~5.0.3",
