--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "express": "~4.16.4",
+    "mongoose": "^5.9.13",
+    "validator": "^13.0.0",
     "vue": "~2.6.8",
     "vue-router": "~3.0.2",
     "vuex": "~3.1.0"
