--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "serve:server": "nodemon server -L",
     "serve": "concurrently \"npm:serve:*\" -k",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint client server",
+    "lint": "vue-cli-service lint client server tests",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit:client": "vue-cli-service test:unit",
+    "test:unit:server": "cross-env NODE_ENV=test mocha tests/unit/server --exit"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "~4.16.4",
     "mongoose": "^5.9.13",
     "validator": "^13.0.0",
@@ -31,6 +33,7 @@
     "babel-eslint": "~10.0.1",
     "babel-jest": "~24.3.1",
     "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
     "eslint": "~5.15.1",
     "eslint-config-standard": "~12.0.0",
     "eslint-plugin-html": "~5.0.3",
@@ -39,7 +42,10 @@
     "eslint-plugin-promise": "~4.0.1",
     "eslint-plugin-standard": "~4.0.0",
     "eslint-plugin-vue": "~5.2.2",
+    "expect": "^26.0.1",
+    "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
+    "supertest": "^4.0.2",
     "vue-template-compiler": "~2.6.8"
   }
 }
