--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "~4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "validator": "^13.0.0",
     "vue": "~2.6.8",
