--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-standard": "~4.0.0",
     "eslint-plugin-vue": "~5.2.2",
     "expect": "^26.0.1",
+    "faker": "^4.1.0",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
     "supertest": "^4.0.2",
